--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,11 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FotosPremium">
-        <activity android:name=".categorias.ListarCategoriasActivity"></activity>
-
-        <activity android:name=".SplashActivity">
-
-        </activity>
+        <activity android:name=".categorias.ListarCategoriasActivity" />
+        <activity android:name=".SplashActivity"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
