--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,8 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
    //Gson para pasar Objetos
     implementation 'com.google.code.gson:gson:2.8.7'
+     // Google AdMob
+    implementation 'com.google.android.gms:play-services-ads:20.1.0'
 
 
 
