--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,12 @@
             </intent-filter>
         </activity>
         <activity android:name=".personas.ListarPersonaActivity" />
-        <activity android:name=".personas.PersonaConectActivity" />
+        <activity android:name=".personas.VerPersonaActivity" />
+        <!-- API Google AdMob -->
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="@string/admob_app_id" />
+
     </application>
 
 </manifest>
