--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,9 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.7'
      // Google AdMob
     implementation 'com.google.android.gms:play-services-ads:20.1.0'
+    //Zoom imagen
+    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
+
 
 
 
